Fix resume page margins on mobile.

--- a/css/resume.css
+++ b/css/resume.css
@@ -4,8 +4,9 @@ body {
 }
 
 .container {
-  width: 50%;
-  margin: 60px auto;
+  max-width: 640px%;
+  margin: 0 auto;
+  padding: 0 20px;
   font-family: Georgia, sans-serif;
 }
 
